tests/ui/tests/name-resolution/single-use-binding-cycle.stderr
error[E024]: declaration `crate.instantly-circular` is circular
 --> ${DIRECTORY}/name-resolution/single-use-binding-cycle.lushui:3:5
  |
3 | use instantly-circular
  |     ^^^^^^^^^^^^^^^^^^ 
  |

error: aborting due to previous error
 note: the error E024 has a detailed explanation
 help: run `lushui explain E024` to view it

